--- a/infra/appserver.yaml
+++ b/infra/appserver.yaml
@@ -1,7 +1,7 @@
 count: 1
 catalogItemName: "java-14-ubuntu-18"
 version: "10"
-deploymentName: "vexpress-scheduling-app-#"
+deploymentName: "vexpress-scheduling-app-$ENVIRONMENT-#"
 projectName: "JenkinsTest"
 reason: "Deployment from Jenkins pipeline"
 inputs:
