--- a/build.gradle
+++ b/build.gradle
@@ -8,11 +8,16 @@ group = 'vexpress'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '8'
 
+ext {
+    set('wavefrontVersion', "2.1.1")
+}
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    implementation 'com.wavefront:wavefront-spring-boot-starter'
     implementation group: 'commons-cli', name: 'commons-cli', version: '1.3.1'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter', version: '2.3.1.RELEASE'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-tomcat', version: '2.3.1.RELEASE'
@@ -20,6 +25,13 @@ dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-amqp', version: '2.3.1.RELEASE'
     testImplementation(group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.3.1.RELEASE') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+    }
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "com.wavefront:wavefront-spring-boot-bom:${wavefrontVersion}"
     }
 }
 
